--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,9 +23,17 @@ jobs:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
-        echo "iniciando login"
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        echo "fin del login"
+        
+    
+    - name: Build docker image
+      run: |
+        docker build -t danielwuachin/docker-graphql:0.0.2 .
+    
+    
+    - name: Push docker image
+      run: |
+        docker push danielwuachin/docker-graphql:0.0.2 .
         
 #     - name: Build the Docker image
 #       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
