--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,7 +33,7 @@ jobs:
     
     - name: Push docker image
       run: |
-        docker push danielwuachin/docker-graphql:0.0.2 .
+        docker push danielwuachin/docker-graphql:0.0.2
         
 #     - name: Build the Docker image
 #       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
