--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,20 +32,24 @@ jobs:
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        NEW_VERSION: ${{ steps.version.outputs.version}}
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
         echo "new version: $NEW_VERSION"
       
     
-#     - name: Build docker image
-#       run: |
-#         docker build -t danielwuachin/docker-graphql:0.0.2 .
+    - name: Build docker image
+      env: 
+        NEW_VERSION: ${{ steps.version.outputs.version}}
+      run: |
+        docker build -t danielwuachin/docker-graphql:$NEW_VERSION .
     
     
-#     - name: Push docker image
-#       run: |
-#         docker push danielwuachin/docker-graphql:0.0.2
+    - name: Push docker image
+      env: 
+        NEW_VERSION: ${{ steps.version.outputs.version}}
+      run: |
+        docker push danielwuachin/docker-graphql:$NEW_VERSION
+        docker push danielwuachin/docker-graphql:latest
         
 #     - name: Build the Docker image
 #       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
